# frp-js

./: README  Setup.lhs  frp.cabal  make
src/: Compiler.hs  Demo.hs  Demo1.hs  Demo2.hs  FFI.hs  FRP.hs  Geometry.hs  Integer.hs  List.hs  Main.hs  Number.hs  Text.hs  Val.hs  Window.hs
src/Browser/: Element.hs  Mouse.hs  Time.hs  Window.hs
src/Core/: Compiler.hs  NewCompiler.hs  Raw.hs  Val.hs
src/Property/: Color.hs  Geometry.hs  Text.hs
src/Value/: Boolean.hs  List.hs  Number.hs
www/: demo.js  main.css  main.html
www/demo1/: main.html
www/demo2/: main.css  main.html
www/frp/: core.js  dom.js  time.js  util.js
www/js/: frp.js
